styles.css
*{
    margin:0;
    padding:0;
    box-sizing:border-box;
    
}

body{
    background: linear-gradient(120deg, #FFEBEB 0%, #FFF3E3 100%);
    font-family: "Plus Jakarta Sans", sans-serif;
}

hr {
  border: none;
  height: 1px;
  background-color: #6b4f5b; /* Muted plum */
}

.heading {
    text-align: center;
    margin: 10px;
    font-family: "Momo Signature", cursive;
}

.navigation {
    margin-block: 15px;
}


.menuItem {
    display: inline-block;
    margin-inline-start: 34px;

}

.menuItem figure img {
    width: 375px;
    height: 375px;
    border-radius: 20px;
}

.navigationLinks {
    padding-left: 150px;
    color: black;
    text-decoration: none;
    font-size:30px;
     font-family: "Momo Signature", cursive;
}

.footer p{
    text-align: center;
    padding: 10px;

}

h1,h2 {
    font-family: "Momo Signature", cursive;
   
}

.recipeImage {
    width:300px;
    height:200px;
    border-radius: 10px;
}

.recipeBody {
   margin-inline: 36px;
}

.ingedientsList li{
    margin-inline-start: 80px;
    padding: 2px;
}

.ingedientsList {
        margin-block: 8px;
}

.RecipeTitle {
    font-size: 64px;
    margin-inline-start: 300px;
      display: inline-block;
    margin-bottom: 10px;
}

.recipePageImage {
    margin-inline-start: 400px;
    width:300px;
    height:200px;
    border-radius: 10px;

}

figcaption {
    margin-inline-start: 400px;
    font-size: smaller;
}

.sectionTitle {
    text-align: center;
}

.subsectionTitle {
    margin-inline-start: 50px;
}

.titleParagraph {
    margin-inline: 50px;
}

